# maxspin

./: .readthedocs.yaml  LICENCE.md  README.md  pyproject.toml  tox.ini  tutorial.ipynb
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst
maxspin/: __init__.py  binning.py  objectives.py  pairwise.py  rl_spatial_information.py  spatial_information.py
tests/: test_maxspin.py
