[tool.poetry]
name = "maxspin"
version = "0.1.1"
description = "Estimate spatial information in spatial -omics datasets."
authors = ["Daniel C. Jones <djones3@fredhutch.org>"]
homepage = "https://github.com/dcjones/maxspin"
repository = "https://github.com/dcjones/maxspin"
documentation = "https://github.com/dcjones/maxspin"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
jax = ">=0.4.8"
anndata = ">=0.8.0"
numpy = ">=1.22.3"
scipy = ">=1.8.1"
flax = ">=0.6.9"
tqdm = ">=4.64.0"
optax = ">=0.1.2"
tensorflow-probability = ">=0.19.0"
numba = ">=0.57" # fix weird dependency error on 3.11 with squidpy and optax

# [tool.poetry.dev-dependencies]
# pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
